--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <meta property="og:description" content="A text adventure game decided by the people.?" />
+    <meta property="og:description" content="A text adventure game decided by the people." />
+    <meta name="description" content="A text adventure game decided by the people." />
     <meta property="og:title" content="Community Text Adventure: Season 2" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://cta2.davecode.me/" />
