final live patch

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
         font-size: 34px;
         color: #64ed98;
         text-decoration: underline;
+        margin-bottom: 5px;
+      }
+      .version-text {
+        font-size: 18px;
+        color: rgba(255,255,255,.2)
       }
 
       h2 {
